--- a/English.lproj/MainMenu.xib
+++ b/English.lproj/MainMenu.xib
@@ -1341,7 +1341,7 @@
 						<reference key="NSOnImage" ref="35465992"/>
 						<reference key="NSMixedImage" ref="502551668"/>
 					</object>
-					<object class="NSMenuItem" id="960358465">
+					<object class="NSMenuItem" id="241825550">
 						<reference key="NSMenu" ref="934289052"/>
 						<bool key="NSIsDisabled">YES</bool>
 						<bool key="NSIsSeparator">YES</bool>
@@ -1351,7 +1351,7 @@
 						<reference key="NSOnImage" ref="35465992"/>
 						<reference key="NSMixedImage" ref="502551668"/>
 					</object>
-					<object class="NSMenuItem" id="454890395">
+					<object class="NSMenuItem" id="556700881">
 						<reference key="NSMenu" ref="934289052"/>
 						<string key="NSTitle">Preferences</string>
 						<string key="NSKeyEquiv"/>
@@ -1369,7 +1369,7 @@
 					</object>
 				</object>
 			</object>
-			<object class="NSCustomObject" id="295454122">
+			<object class="NSCustomObject" id="162751551">
 				<string key="NSClassName">AppController</string>
 			</object>
 		</object>
@@ -2049,14 +2049,6 @@
 					<int key="connectionID">530</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">statusMenu</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="934289052"/>
-					</object>
-					<int key="connectionID">537</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
 						<string key="label">createTunnel:</string>
 						<reference key="source" ref="976324537"/>
@@ -2083,7 +2075,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
 						<string key="label">showPreferencePanel:</string>
-						<reference key="source" ref="295454122"/>
+						<reference key="source" ref="162751551"/>
 						<reference key="destination" ref="609285721"/>
 					</object>
 					<int key="connectionID">544</int>
@@ -2091,10 +2083,18 @@
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
 						<string key="label">showPreferencePanel:</string>
-						<reference key="source" ref="295454122"/>
-						<reference key="destination" ref="454890395"/>
+						<reference key="source" ref="162751551"/>
+						<reference key="destination" ref="556700881"/>
 					</object>
 					<int key="connectionID">545</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">statusMenuOutlet</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="934289052"/>
+					</object>
+					<int key="connectionID">551</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3131,8 +3131,8 @@
 							<reference ref="762771544"/>
 							<reference ref="948982987"/>
 							<reference ref="539148482"/>
-							<reference ref="454890395"/>
-							<reference ref="960358465"/>
+							<reference ref="556700881"/>
+							<reference ref="241825550"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -3140,13 +3140,11 @@
 						<int key="objectID">534</int>
 						<reference key="object" ref="948982987"/>
 						<reference key="parent" ref="934289052"/>
-						<string key="objectName">startTunnel</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">535</int>
 						<reference key="object" ref="762771544"/>
 						<reference key="parent" ref="934289052"/>
-						<string key="objectName">stopTunnel</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">536</int>
@@ -3156,17 +3154,17 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">541</int>
-						<reference key="object" ref="454890395"/>
+						<reference key="object" ref="556700881"/>
 						<reference key="parent" ref="934289052"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">542</int>
-						<reference key="object" ref="960358465"/>
+						<reference key="object" ref="241825550"/>
 						<reference key="parent" ref="934289052"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">543</int>
-						<reference key="object" ref="295454122"/>
+						<reference key="object" ref="162751551"/>
 						<reference key="parent" ref="0"/>
 					</object>
 				</object>
@@ -3641,23 +3639,21 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{454, 352}, {131, 93}}</string>
+					<string>{{459, 292}, {131, 93}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSMutableDictionary">
-						<string key="NS.key.0">AccessibilityDescription</string>
-						<object class="IBAccessibilityAttribute" key="NS.object.0">
-							<string key="name">AccessibilityDescription</string>
-							<reference key="object" ref="948982987"/>
-							<string key="accessibilityValue">startTunnel</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<reference key="dict.sortedKeys" ref="0"/>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
 						</object>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSMutableDictionary">
-						<string key="NS.key.0">AccessibilityDescription</string>
-						<object class="IBAccessibilityAttribute" key="NS.object.0">
-							<string key="name">AccessibilityDescription</string>
-							<reference key="object" ref="762771544"/>
-							<string key="accessibilityValue">stopTunnel</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<reference key="dict.sortedKeys" ref="0"/>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
 						</object>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3725,7 +3721,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">545</int>
+			<int key="maxID">551</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3766,7 +3762,7 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>statusMenu</string>
+							<string>statusMenuOutlet</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
